--- a/_posts/2022-08-01-INITIUM-双减-落地一年-教培地下化-一些学生或成为被-减去-的人.html
+++ b/_posts/2022-08-01-INITIUM-双减-落地一年-教培地下化-一些学生或成为被-减去-的人.html
@@ -9,29 +9,10 @@ author: 特约撰稿人 沈佳如 发自北京
 ---
 
 <p>「考试内容、社会评价体系都没有变，看似推进教育公平的“双减”政策，结果可能适得其反。」</p><p>特约撰稿人 沈佳如 发自北京</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220802-mainland-one-year-after-double-reduction-policy/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/75ffcc1f85704b4dad253592b60ccc8b.jpg?imageView2/1/w/1080/h/715/format/jpg" alt="2012年，中国安徽省合肥市，一名学生为高考作准备。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2012年，中国安徽省合肥市，一名学生为高考作准备。<span class="credit">摄：Stringer/Reuters/达志影像</span></figcaption></figure><p><small>距离中国教育部正式发布“双减”政策，已过去了一年。</small><br><br><small>2021年7月24日，中国教育部发布《关于进一步减轻义务教育阶段学生作业负担和校外培训负担的意见》，被称为“双减”政策。</small><br><br><small>按照政策要求，所有K12（小学至高中12年教育）学科类校外培训服务，都必须在年内停止。</small><br><br><small>教培行业（注：即补习行业）遭到“团灭”，K9（小学至初中9年教育）英文辅导培训是重灾区。根据《中国企业家》报导，中国大陆有70万家教培机构，多达1000万的从业人员瞬间失去了合法的职业地位。2021年8月，《南方周末》援引蓝象资本投资副总裁陈晶的估算，一个月内约有20%-30%的教培从业人员被裁，预计行业整体裁员比例可能会达到50%。</small><br><br><small>一年过去，一些教培人还在业内坚持，更多的则被迫转行：有的准备去互联网公司当运营，有的转去私立学校当老师，有的去做人力行政，有的则仍在待业中。转行“最成功”的，要数语文老师董宇辉。他跟著已改名为“东方甄选”的原教培企业“新东方”，转战到网络直播带货赛道，成为网红，被官方树立为转型成功的教培人模范。</small><br><br><small>“不论是留下的，还是离开的，这一年，所有教培人都过得很辛苦。”Monica曾在一家知名上市公司担任教培业务管理层，有著十余年英文教学经验。不论是常规考试，还是素质开发，Monica都获得业界和学生家长的认可。“双减”政策落地后，她不出意外地被公司裁员。</small><br><br><small>如今，Monica仍留在教培行业，“大家都有一种不安全感。我们现在很像40年前的韩国。”</small><br><br><small>1980年7月30日，军人全斗焕执政时期，韩国出台“7.30教育改革政策”，全面禁止课外补习，提供辅导的老师或者聘请老师的家长，都会受到处分。政府甚至成立了“课外辅导打压队”，对老师和学生实施震摄。为了躲避“课外辅导打压队”，老师和家长们想出了千奇百怪的法子，比如：让老师深夜来家辅导，让老师打扮成亲戚或家政工人，躲到郊外甚至在汽车里进行辅导。</small><br><br><small>到上世纪90年代末，补习禁令已逐渐形同虚设。2000年4月，韩国最高法院宣布禁止补课的法令违反宪法，并予以取消。法院在判决中表示：“禁止补习侵犯了儿童的受教育权。”</small></p>
-<p><small>“双减”政策，和40年前的韩国如出一辙。业内究其原因，有两种猜想。其一是打击体制外的精英教育，将高达万亿人民币规模的学科类培训市场强行划拨给公立学校，将市场和意识形态牢牢掌握在体制内机构手中；其二是降低养育孩童费用、鼓励生育，减缓步入深度老龄化社会的速度。</small></p>
-<p><small>无论是什么原因，Monica认为，教育双轨制的局面没有改变，因为考试内容没有变化，社会看重文凭学历、重脑力轻体力的职业地位和收入差距评价体系没有变化。看似推进教育公平的“双减”政策，结果可能适得其反。“双减”冲击了偏远地区及工薪阶层的孩童，他们无法像之前那样参加大班课外补习，仅凭学校的课程根本无法够得上名校的考试选拔，而有钱人的子女则不受影响，完全可以高价请私教进行一对一辅导。</small></p>
-<p><small>围绕教培行业这一年的变化，我们采访了Monica，以下是她的口述，有删节。</small></p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220802-mainland-one-year-after-double-reduction-policy/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/4b96eee3f608402db1bcad06c790cfaf.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年9月，中国上海一家倒闭的补习学校。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2021年9月，中国上海一家倒闭的补习学校。<span class="credit">摄：Yomiuri Shimbun via AP/达志影像</span></figcaption></figure>
-
-<h2>关系到位，就能获得国家开的“白名单”</h2>
-<p>2021年8月，“双减”政策一下来没多久，我就从那家上市公司被裁员了。“双减”政策规定，禁止学科类培训资本化运营，禁止周六周日、寒暑假补习。这正是民营教培机构盈利的来源。我的公司正好是上市民企，就把K9教培这块业务整个砍掉，我们几千人都被裁员了。</p>
-<p>我觉得最难的时候，是被裁员之后的一个月，心理压力很大，因为眼看著同事们都被裁完了，他们投简历找工作，投了很多都没有回复，各个教培机构都在裁员，你不可能找到工作。</p>
-<p>我任职的这家公司和新东方等知名企业一样，因为是名企，必须严格按照政策规定，一点擦边球都打不了，怕被举报，这么大的企业肯定一举报一个准，所以必须转型。这些知名企业，比如瑞思教育、作业帮、学而思等，有的转做成人教育，有的拓展兴趣班，比如转做围棋、篮球等，像新东方这样的就彻底告别教培行业，转型电商直播卖货。当然，这些业务的规模远远比不上K9学科培训。</p>
-<p>我现在在一家获得国家许可的教培机构工作。</p>
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
+            <figcaption itemprop="caption">2012年，中国安徽省合肥市，一名学生为高考作准备。<span class="credit">摄：Stringer/Reuters/达志影像</span></figcaption></figure><p>距离中国教育部正式发布“双减”政策，已过去了一年。<br><br>2021年7月24日，中国教育部发布《关于进一步减轻义务教育阶段学生作业负担和校外培训负担的意见》，被称为“双减”政策。<br><br>按照政策要求，所有K12（小学至高中12年教育）学科类校外培训服务，都必须在年内停止。<br><br>教培行业（注：即补习行业）遭到“团灭”，K9（小学至初中9年教育）英文辅导培训是重灾区。根据《中国企业家》报导，中国大陆有70万家教培机构，多达1000万的从业人员瞬间失去了合法的职业地位。2021年8月，《南方周末》援引蓝象资本投资副总裁陈晶的估算，一个月内约有20%-30%的教培从业人员被裁，预计行业整体裁员比例可能会达到50%。<br><br>一年过去，一些教培人还在业内坚持，更多的则被迫转行：有的准备去互联网公司当运营，有的转去私立学校当老师，有的去做人力行政，有的则仍在待业中。转行“最成功”的，要数语文老师董宇辉。他跟著已改名为“东方甄选”的原教培企业“新东方”，转战到网络直播带货赛道，成为网红，被官方树立为转型成功的教培人模范。<br><br>“不论是留下的，还是离开的，这一年，所有教培人都过得很辛苦。”Monica曾在一家知名上市公司担任教培业务管理层，有著十余年英文教学经验。不论是常规考试，还是素质开发，Monica都获得业界和学生家长的认可。“双减”政策落地后，她不出意外地被公司裁员。<br><br>如今，Monica仍留在教培行业，“大家都有一种不安全感。我们现在很像40年前的韩国。”<br><br>1980年7月30日，军人全斗焕执政时期，韩国出台“7.30教育改革政策”，全面禁止课外补习，提供辅导的老师或者聘请老师的家长，都会受到处分。政府甚至成立了“课外辅导打压队”，对老师和学生实施震摄。为了躲避“课外辅导打压队”，老师和家长们想出了千奇百怪的法子，比如：让老师深夜来家辅导，让老师打扮成亲戚或家政工人，躲到郊外甚至在汽车里进行辅导。<br><br>到上世纪90年代末，补习禁令已逐渐形同虚设。2000年4月，韩国最高法院宣布禁止补课的法令违反宪法，并予以取消。法院在判决中表示：“禁止补习侵犯了儿童的受教育权。”</p>
+<p>“双减”政策，和40年前的韩国如出一辙。业内究其原因，有两种猜想。其一是打击体制外的精英教育，将高达万亿人民币规模的学科类培训市场强行划拨给公立学校，将市场和意识形态牢牢掌握在体制内机构手中；其二是降低养育孩童费用、鼓励生育，减缓步入深度老龄化社会的速度。</p>
+<p>无论是什么原因，Monica认为，教育双轨制的局面没有改变，因为考试内容没有变化，社会看重文凭学历、重脑力轻体力的职业地位和收入差距评价体系没有变化。看似推进教育公平的“双减”政策，结果可能适得其反。“双减”冲击了偏远地区及工薪阶层的孩童，他们无法像之前那样参加大班课外补习，仅凭学校的课程根本无法够得上名校的考试选拔，而有钱人的子女则不受影响，完全可以高价请私教进行一对一辅导。</p>
+<p>围绕教培行业这一年的变化，我们采访了Monica，以下是她的口述，有删节。</p>
  
 
  
@@ -69,6 +50,24 @@ author: 特约撰稿人 沈佳如 发自北京
  
  
  
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  
  
  
@@ -83,7 +82,8 @@ author: 特约撰稿人 沈佳如 发自北京
  
  
  
-<p>“双减”之后，K12课外补习这块蛋糕不许民营企业碰了、不许市场化，但是国家授予许可的一些机构可以做，小孩周一到周五下课后可以来这些机构补习。</p><p>这类机构有一些硬性规定，比如办学场地的大小、具有教师资格证的教师比例、必须使用国内教材且不得超纲等⋯⋯但这些都不是最重要的，最重要的是这个机构和所在城市教育委员会的关系。关系“到位”，就能获得通过拿到经营资质，关系不到位，就够呛。这个就是国家开的“白名单”。</p><p>来这些机构应聘，是需要资历的，从业经验至少得5年以上。机构肯定倾向于选择知名度大的资深老师，因为这些老师能为它留住客户甚至带来生源。家长们的眼睛也很“毒”，你去给人家（小孩）上过几次课，家长就知道你有没有经验。他们的需求很直接，就是提高分数。</p><p>
+<p><a class="image" href="https://theinitium.com/article/20220802-mainland-one-year-after-double-reduction-policy/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/4b96eee3f608402db1bcad06c790cfaf.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年9月，中国上海一家倒闭的补习学校。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2021年9月，中国上海一家倒闭的补习学校。<span class="credit">摄：Yomiuri Shimbun via AP/达志影像</span></figcaption><p></p><p>关系到位，就能获得国家开的“白名单”</p><p>2021年8月，“双减”政策一下来没多久，我就从那家上市公司被裁员了。“双减”政策规定，禁止学科类培训资本化运营，禁止周六周日、寒暑假补习。这正是民营教培机构盈利的来源。我的公司正好是上市民企，就把K9教培这块业务整个砍掉，我们几千人都被裁员了。</p><p>我觉得最难的时候，是被裁员之后的一个月，心理压力很大，因为眼看著同事们都被裁完了，他们投简历找工作，投了很多都没有回复，各个教培机构都在裁员，你不可能找到工作。</p><p>我任职的这家公司和新东方等知名企业一样，因为是名企，必须严格按照政策规定，一点擦边球都打不了，怕被举报，这么大的企业肯定一举报一个准，所以必须转型。这些知名企业，比如瑞思教育、作业帮、学而思等，有的转做成人教育，有的拓展兴趣班，比如转做围棋、篮球等，像新东方这样的就彻底告别教培行业，转型电商直播卖货。当然，这些业务的规模远远比不上K9学科培训。</p><p>我现在在一家获得国家许可的教培机构工作。</p><p>“双减”之后，K12课外补习这块蛋糕不许民营企业碰了、不许市场化，但是国家授予许可的一些机构可以做，小孩周一到周五下课后可以来这些机构补习。</p><p>这类机构有一些硬性规定，比如办学场地的大小、具有教师资格证的教师比例、必须使用国内教材且不得超纲等⋯⋯但这些都不是最重要的，最重要的是这个机构和所在城市教育委员会的关系。关系“到位”，就能获得通过拿到经营资质，关系不到位，就够呛。这个就是国家开的“白名单”。</p><p>来这些机构应聘，是需要资历的，从业经验至少得5年以上。机构肯定倾向于选择知名度大的资深老师，因为这些老师能为它留住客户甚至带来生源。家长们的眼睛也很“毒”，你去给人家（小孩）上过几次课，家长就知道你有没有经验。他们的需求很直接，就是提高分数。</p><p>
 </p><p>一个重要的因素是，补习刚需仍然存在。因为考试的内容没有改变，尤其是名校的考试超出课本大纲，必须靠补习才有考取的希望。</p>
 <p></p><p>像我这样从业十多年的老师们，基本都还留在教培行业。毕竟已经在一个行业里深耕细作，再去一个陌生领域重新开始成本太高，也不太现实。一个重要的因素是，补习刚需仍然存在。因为考试的内容没有改变，尤其是名校的考试超出课本大纲，必须靠补习才有考取的希望。</p><p>现在K9的孩子们，一般选择在周一到周五放学后补习，有的偷偷在周六周日补习，还有的通过网络补习。</p><p>“双减”政策刚下来时，为了杜绝教培补习，政府为学生们安排了一个叫“校内服务”的补习，周一至周五放学后，让孩子们留下，由官方指定的机构老师过来给孩子们集体补习，就是把以前家长们自主选择的课外补习挪到自己碗里。我现在这个公司也是有资质提供“校内服务”的。</p><p>国家对“校内服务”给予财政补贴，至于财政补贴是全部给到合作机构、还是学校与合作机构分，那就是他们的事了。</p><p>这个“校内服务”一开始是强制的，后来一些学校的家长集体反对，官方指定的补习就松动了，学生要是不想参加可以请假。</p><p>
 </p><p>学校都要例行查问有没有去课外补习班。孩子们要提前对好“口供”，练习说谎，要一口咬定“没有参加课外补习”。</p>
