--- a/_posts/2022-08-02-INITIUM-早报-佩洛西昨晚抵达台湾-今将见蔡英文-中方强烈抗议.html
+++ b/_posts/2022-08-02-INITIUM-早报-佩洛西昨晚抵达台湾-今将见蔡英文-中方强烈抗议.html
@@ -8,8 +8,8 @@ tags: blog
 author: 
 ---
 
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220803-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/b5123ea4e3f64bf9942a37920590500a.png?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月2日，台湾，美国国会众议长佩洛西（Nancy Pelosi）抵达台北松山机场。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年8月2日，台湾，美国国会众议长佩洛西（Nancy Pelosi）抵达台北松山机场。<span class="credit">摄：Getty Images</span></figcaption></figure><h3>佩洛西昨晚抵达台湾，今将见蔡英文</h3>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220803-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/b91e66b22511470d96fa3281aea0149c.JPG?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月2日，美国众议院议长佩洛西率领访问团到访台湾，台湾外交部部长吴钊燮（左一）前往接机。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2022年8月2日，美国众议院议长佩洛西率领访问团到访台湾，台湾外交部部长吴钊燮（左一）前往接机。<span class="credit">图：台湾外交部</span></figcaption></figure><h3>佩洛西昨晚抵达台湾，今将见蔡英文</h3>
 <p><a href="https://www.cna.com.tw/news/aipl/202208025012.aspx">中央社报导</a>，美国国会众议长佩洛西（Nancy Pelosi）昨晚10时44分搭乘行政专机抵达台北松山机场。</p>
 <p>这是继1997年时任美国众议长金里奇（Newt Gingrich）后，25年来访台层级最高的美国政要。</p>
 <p>台湾外交部长吴钊燮前往松山机场迎接，美国在台协会（AIT）处长孙晓雅（Sandra Oudkirk）现场陪同。</p>
