Update VOCUS 2022-08-04 patch

--- a/_posts/2022-08-03-VOCUS-子彈列車-動漫感十足的群像爽片.html
+++ b/_posts/2022-08-03-VOCUS-子彈列車-動漫感十足的群像爽片.html
@@ -41,4 +41,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/54c146f0-c1c5-4ed2-8abf-ac6419fd35fa.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">在電影裡許多運鏡風格和動作設計我覺得都有和動畫元素致敬的味道，導演也指導過《死侍》、監製過《捍衛任務》，有了伊坂幸太郎原作架構出的小說背景支撐，讓《子彈列車》可以大膽在列車上發揮動作戲。雖然如此，有一點卻很弔詭，都修改這麼多小說情節了，怎麼沒把日本小說那愛說大道理的橋段給砍掉？反而保留那些莫名其妙的說教戲。</div>
 <div class="draft-block draft--p left">整體而言我覺得《子彈列車》是有趣的，可以看到一種和風和美式幽默的結合，形成一部很異色的動作電影，但又不過於突兀。但雖然已經改良很多日本梗，但畢竟原作是日本作品，一般習慣國際大眾動作片群眾吃不吃這套，就有待認證了。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/tzrcqlOVLiI&t=149s"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/tzrcqlOVLiI"></iframe></div>
