--- a/_posts/2022-08-03-PQ-入冬後疫情再起-病毒研究受大國-不合作-阻撓.html
+++ b/_posts/2022-08-03-PQ-入冬後疫情再起-病毒研究受大國-不合作-阻撓.html
@@ -24,7 +24,7 @@ author: 李熱葵
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2020/02/528556dc-timg-1024x573.jpg" alt="獲得法國援助而建成的武漢P4實驗室 圖／鳳凰網" class="wp-image-20318" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/02/528556dc-timg-1024x573.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2020/02/528556dc-timg-300x168.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/02/528556dc-timg-768x430.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2020/02/528556dc-timg.jpg 1527w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>獲得法國援助而建成的武漢P4實驗室（圖／鳳凰網）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2020/02/528556dc-timg-1024x573.jpg" alt="獲得法國援助而建成的武漢P4實驗室 圖／鳳凰網" class="wp-image-20318" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/02/528556dc-timg-1024x573.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2020/02/528556dc-timg-300x168.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/02/528556dc-timg-768x430.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2020/02/528556dc-timg.jpg 1527w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>獲得法國援助而建成的武漢P4實驗室（圖／鳳凰網）</figcaption></figure>
 
 
 
