--- a/_posts/2022-08-04-INMEDIA-麥美娟稱望到新疆旅遊-批外國污蔑新疆棉.html
+++ b/_posts/2022-08-04-INMEDIA-麥美娟稱望到新疆旅遊-批外國污蔑新疆棉.html
@@ -18,6 +18,7 @@ author: 獨媒報導
 <p>麥美娟形容，西藏是「你去到就好開心嘅地方嚟，唔知點解係好開心嘅城市，去到自然會感覺到好開心」。麥美娟稱西藏十分值得去，「求其一個地方落車，望下個天，你就已經⋯⋯嘩好開心。」</p>
 <p>不過麥美娟就稱十分愛熱鬧，表示如一個人去旅行或自駕遊「怕悶」，在旅途中會WhatsApp 朋友「宜家睇緊咩」。馬浚偉笑稱「你都係搵返個伴好啲」，多年來一直未婚的麥美娟，她就大笑回應稱，「我有好多姊妹聽我講嘢」。</p>
 <p>麥美娟早前加入李家超班子，由立法會議員成為民政及青年事務局局長。在節目中，馬浚偉大讚麥美娟議員時已硬淨、立場清晰及搏命。麥美娟則指自己讀書時十分怕羞，坐小巴上學亦不敢對司機揚聲下車。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/photos/inmediahk/43935070964/in/photolist-2jM6yrC-2jM5FYC-2jM5FSL-2jM29Xc-2jANJfv-2jhfUn6-2jgKxBK-2je9wg5-2j8Cb8a-2j6qiUx-2j5taie-2j5qvTq-2j56kXW-2j56kXv-2j56jua-2j56j45-2j54NVX-2j54NvZ-2j527xP-2j4rkxC-2j4rwyS-2iT1SvK-PeU9TS-29WoHVw-257ou9j-Zb6y9d-SG8Tom-RgKKmY-uRCe6m-tVfqdv-uxm23E-2j3vgiJ-2j3byuv-2j38haj-2iXJpd7-2iVbFAy-2iT3r18-2iT3qXY-2iSmopv-2iSmon1-2iSmoiD-2iSiAE5-2iSiABK-2iFWCtv-2iwwAoa-2fPi6dA-2fGGCNf-RbHQBU-27fEv5L-JDFxc1" title="IMG_8887"><img src="https://live.staticflickr.com/1848/43935070964_f99a93c677_b.jpg" alt="IMG_8887" /></a></p>
 <p><strong>重提反修例事件  稱體諒年輕人被誤導</strong></p>
 <p>後來在中五的時候，母親因心臟病離世，麥美娟稱自己被迫成長，要到街市買餸及照顧家人，「先至練同陌生人講嘢，照顧屋企人照顧細佬，個口先開口講嘢。」她指母親在哥哥生日前一日過身，對家庭造成很大打擊，每逢節日更感難過，直至大學畢業及投身社會後才適應過來。</p>
 <p>在中大畢業後，麥美娟即獲港英政府委任成區議員，當時僅22歲。她在節目中強調自己是最後一名委任議員，指當時獲委任因參加葵青區徵文比賽，從而繼續參與社區服務。</p>
