Update VOCUS 2022-08-05 patch

--- a/_posts/2022-08-04-VOCUS-貝爾對抗荒野-野外求生知多少.html
+++ b/_posts/2022-08-04-VOCUS-貝爾對抗荒野-野外求生知多少.html
@@ -44,4 +44,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/a7320bb9-3d61-4428-98f7-7dca74ac9ab8.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">雖然在節目進行會有出戲與朵拉感，而且有些故事的確讓人難以投入且剪輯感嚴重，例如2022年版的《Ranveer vs Wild with Bear Grylls》是要幫助印度演員尋找稀有的花朵，整個故事和人物設定都充滿違和感。但是我還是對於裡面教導野外求生的內容抱持正面評價，</div>
 <div class="draft-block draft--p left">畢竟你不知道哪時候會用到這些常識，看起來可笑或是想像不到的野外求生知識，可能會在某個時間點意外的救了你小命，讓你在嚴峻的自然中可以生存。並且《貝爾對抗荒野》還可以讓你看見選擇錯誤時會遭受的後果，讓參與選擇的觀眾加深印象，故挑個求生任務當作一場有趣的教育互動體驗，也算是不錯的一種育教消遣體驗。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/pwcr3cc0LZM"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/pwcr3cc0LZM"></iframe></div>
