--- a/_posts/2022-08-04-PQ-蔡政府二次執政兩週年-外交機會多-穩健執政但須主動.html
+++ b/_posts/2022-08-04-PQ-蔡政府二次執政兩週年-外交機會多-穩健執政但須主動.html
@@ -32,6 +32,14 @@ author: 潘柏廷
 
 
 
+<p class="pqnote">陳南天主席提到，台獨聯盟一直倡議全面性的正名，因為每個正名都是對台灣價值的重新肯認，而台灣價值透過普世價值深耕在台灣的在地化表現，需要透過民主實踐、轉型正義與自我認同而逐漸確認。正名的範圍不管是涉及到轉型正義的街道名：台灣到處的中正路、中山路的極權遺緒，應該要改為更能表現在地特色、凝聚地方或具有歷史意識的街道名；還是涉及到會讓世界混淆與自我認同錯亂的「中華」：中華郵政與中華航空，都應該要積極改為台灣郵政、台灣航空。更要從內到外的正名，在海外的台灣人更殷殷企盼著，台灣的外館應該在尚未被承認為國家前，先行正名為台灣代表處，我們可以在爭取國際承認的同時，先展現自己作為國家的意志。</p>
+
+
+
+<p>陳南天強調，當然，正名需要總統帶頭使用台灣，如果避免不了用名字自我指稱，應該就好好用個不會自我困惑的名字。<strong>蔡總統如果沿用中華民國，只會因為一中政策而被世界排擠，以為台灣人還想當中國人，或是進而創造兩個中國，不利爭取國際承認，然而，許多台派人取巧地使用中華民國台灣，長期下來只會混淆國際視聽，更造成台灣下個世代的認同混亂。</strong></p>
+
+
+
 <p class="pqnote">陳南天主席最後也強調，台灣無疑是個民主國家，蔡英文總統強調民主深化的重要性，也不應遺忘轉型正義與國家正常化，台灣主體性透過民主實踐、轉型正義與自我認同而逐漸確認，並以此爭取國際承認、展現自己作為國家的意志，而台灣目前仍欠缺一部由台灣人民自己制定的憲法，完全執政的民進黨政府也應向致力制定台灣憲法而努力。</p>
 
 
