--- a/_posts/2022-08-04-PQ-蔡政府二次執政兩週年-維持現狀不再管用-台灣須往-國家正常化-再邁進.html
+++ b/_posts/2022-08-04-PQ-蔡政府二次執政兩週年-維持現狀不再管用-台灣須往-國家正常化-再邁進.html
@@ -16,7 +16,7 @@ author: 麥聊
 
 
 
-<div class="wp-block-image is-style-default"><figure class="aligncenter size-large is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489-1024x683.jpg" alt="" class="wp-image-110105" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489.jpg 1920w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>杜文苓教授說，國際局勢變化快速，本土政權又該如何守護我們的民主與生活方式？<br>（圖／報呱記者攝）</figcaption></figure></div>
+<div class="wp-block-image is-style-default"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489-1024x683.jpg" alt="" class="wp-image-110105" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/0447b5c6-dsc_2489.jpg 1920w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>杜文苓教授說，國際局勢變化快速，本土政權又該如何守護我們的民主與生活方式？<br>（圖／報呱記者攝）</figcaption></figure></div>
 
 
 
