--- a/_posts/2022-08-04-PQ-蔡政府二次執政兩週年-奠基本土內政-有助台灣在國際綻放異彩.html
+++ b/_posts/2022-08-04-PQ-蔡政府二次執政兩週年-奠基本土內政-有助台灣在國際綻放異彩.html
@@ -36,7 +36,7 @@ author: 李 運理
 
 
 
-<p>在教育產業中的國安問題，陳俐甫也指出，台灣人民與中國、東南亞國家人民之間的婚姻十分常見，其後代在外來，作為可能運轉台灣事務的棟樑，其所受教育中所強調的台灣價值認同，便攸關爾後國家的運轉。<strong>台灣的外來將交棒在何種人民之上，凸顯出當前的教育亦具備國安性質，也急需被教育部重視。</strong></p>
+<p>在教育產業中的國安問題，陳俐甫也指出，台灣人民與中國、東南亞國家人民之間的婚姻十分常見，其後代在未來，作為可能運轉台灣事務的棟樑，其所受教育中所強調的台灣價值認同，便攸關爾後國家的運轉。<strong>台灣的未來將交棒在何種人民手上，凸顯出當前的教育亦具備國安性質，也急需被教育部重視。</strong></p>
 
 
 
