--- a/_posts/2022-08-04-PQ-蔡政府二次執政兩週年-台灣國防下一步-全民防衛-創新與經濟成關鍵.html
+++ b/_posts/2022-08-04-PQ-蔡政府二次執政兩週年-台灣國防下一步-全民防衛-創新與經濟成關鍵.html
@@ -16,7 +16,7 @@ author: 呂酒林
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694-1024x683.jpg" alt="" class="wp-image-110189" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣獨立建國聯盟與台灣安保協會今（4）日舉辦《本土政權二次完全執政二週年挑戰與展望》座談會。第四場次以「國防」為題，邀請台灣國家寶藏召集人蕭新晟主持。（圖／本報攝）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694-1024x683.jpg" alt="" class="wp-image-110189" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/4cb2c553-dsc_2694.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣獨立建國聯盟與台灣安保協會今（4）日舉辦《本土政權二次完全執政二週年挑戰與展望》座談會。第四場次以「國防」為題，邀請台灣國家寶藏召集人蕭新晟主持。（圖／本報攝）</figcaption></figure>
 
 
 
