--- a/_posts/2022-08-05-INMEDIA-駐歐盟特派代表張國財出任廣播處長-第三名政務官空降.html
+++ b/_posts/2022-08-05-INMEDIA-駐歐盟特派代表張國財出任廣播處長-第三名政務官空降.html
@@ -12,6 +12,6 @@ author: 獨媒報導
 <p>廣播處長等同公務員首長級第五級（D5），他於2021年4月才晉升為首長級乙一級政務官（D4），即今次委任微升一級。新聞稿亦指，張國財1993年10月加入政務職系後，曾在多個決策局及部門服務，包括前政務總署、前衞生福利科、前財經事務科、香港駐多倫多經濟貿易辦事處、前資訊科技及廣播局、前教育統籌局及民政事務總署。</p>
 <p>他於2012年5月至2013年1月出任財經事務及庫務局首席助理秘書長（財經事務），2013年1月至2019年8月出任財經事務及庫務局副秘書長（財經事務），並從2019年8月起出任香港駐歐洲聯盟特派代表。</p>
 <p>公務員事務局局長楊何蓓茵形容張國財為資深政務主任，「具備出色領導和管理才能」﹐有信心他能在新崗位繼續為市民提供專業高效的服務。</p>
-<p>至於前廣播處長李百全早前已獲委任為保安局常任秘書長，他於2021年3月接替提前解約的梁家榮，以政務官背景「空降」出任廣播處長，被質疑沒有傳媒經驗，履身當日更即遇港台節目製作人員工會成員抗議。</p>
+<p>至於前廣播處長李百全早前已獲委任為保安局常任秘書長，他於2021年3月接替提前解約的梁家榮，以政務官背景「空降」出任廣播處長，被質疑沒有傳媒經驗，履新當日更即遇港台節目製作人員工會成員抗議。</p>
 <p>在他任內，多個港台節目被審查及抽起，包括《鏗鏘集：青春的一場修煉》、因車牌查冊被控的蔡玉玲任編導的《卓越教室》及訪問民主派初選案被捕人之一李芝融的《幸福的繞道》。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
