--- a/_posts/2022-08-05-INMEDIA-何永賢籲各方接受公屋加租-稱1年寬免已平衡法理人情.html
+++ b/_posts/2022-08-05-INMEDIA-何永賢籲各方接受公屋加租-稱1年寬免已平衡法理人情.html
@@ -21,7 +21,7 @@ author: 獨媒報導
 <p>孫玉菡於開幕禮致辭時讚揚參展攤位的展品，惟開幕禮結束後，有記者追問孫玉菡有關MIRROR演唱會事故後續消息，但他沒回應便離去。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/C17Bu2f19W" title="無標題"><img src="https://live.staticflickr.com/65535/52264706945_48435faf7b_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/01m7j34nVa" title="無標題"><img src="https://live.staticflickr.com/65535/52264235473_e29c7d4ee8_b.jpg" width="1024" alt="無標題" /></a></p>
-<p><strong>兩局長體驟日商研發輕量拐杖稱奇</strong></p>
+<p><strong>兩局長體驗日商研發輕量拐杖稱奇</strong></p>
 <p>另外，一眾官員及開幕禮嘉賓一同參與展覽導賞團，在參觀日本貿易振興機構（香港）的攤位時，孫玉菡及何永賢分別把手體驗由日商研發、重量僅250克的輕身拐杖，數人均對拐杖的輕量感驚奇。孫玉菡之後亦對展覽內的科技產品大讚「好犀利」，並到訪黃金時代「疫」風同行的展位，了解消毒機械人「金醫生」在合作院舍的服務狀況。</p>
 <p>何永賢就指，早前到一個40年歷史的屋邨探望一戶居民，觀察到他們隨着年紀老邁對屋邨設施的需求日漸不同，故房屋局將著手研究如何改善邨內設施，鼓勵居民做運動及加強社交，提升「幸福感」。</p>
 </div></div></div>
