--- a/_posts/2022-08-05-INMEDIA-愛國團體-指自由亞洲電台報道觸犯國安法-向警方報案.html
+++ b/_posts/2022-08-05-INMEDIA-愛國團體-指自由亞洲電台報道觸犯國安法-向警方報案.html
@@ -15,5 +15,6 @@ author: 獨媒報導
 <p><strong>信列15篇含「極具代表性的違規內容」報導</strong></p>
 <p>Johnny 向《獨媒》表示，稱經會內研究過後，認為自由亞洲電台的報導內容涉誣蔑國家主席習近平及觸犯《港區國安法》。他們予警方的舉報信長達17頁，信中指《自由亞洲電台》的新聞報導中「負面的政治新聞佔據很大篇幅，尤其是對於香港、內地」，並羅列15篇形容為「極具代表性的違規內容」報導，包括「在囚黎智英74歲生日 前員工MARKSIMON遙寄祝福」、「海外港人籌備明年「香港議會」普選 望國際承諾港人公投自決」等5篇報導；以及「【共運史話】和理勇行動：六四是香港人的傷口 更是中共的魔咒 」、「【歷史冷知識】今日香港新聞自由不如滿清」等10篇評論及專訪。信中附有相關報導的內文節錄、截圖及連結。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/S74u0uxo38" title="Johnny"><img src="https://live.staticflickr.com/65535/52264448933_5a0338ee20_c.jpg" width="800" alt="Johnny" /></a></p>
-<p>Johnny 促警方根據《香港國安法》第43條《實施細則》，要求發布人士或服務商移除相關內容，以削弱該台影響力。他又向《獨媒》表示，計劃稍後前往《自由亞洲電台》的在港辦公室示威。</p>
+<p>Johnny 促警方根據《香港國安法第43條實施細則》，要求發布人士或服務商移除相關內容，以削弱該台影響力。他又向《獨媒》表示，計劃稍後前往《自由亞洲電台》的在港辦公室示威。</p>
+<p>一名在港自由亞洲電台職員Peter（化名）向《獨媒》表示，該台的最終編輯及決定權歸美國總部所有，指團體羅列的報道均由海外同事處理，在港職員只負責處理本地官方消息及港聞，該些報導皆與在港職員無關。他指本港的同事均「按照香港法例去做」，不憂慮團體的指控。</p>
 </div></div></div>
