--- a/_posts/2022-08-05-INMEDIA-理大圍城-youtuber等8人涉佐敦暴動-1人染疫-裁決押後至9.21.html
+++ b/_posts/2022-08-05-INMEDIA-理大圍城-youtuber等8人涉佐敦暴動-1人染疫-裁決押後至9.21.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "【理大圍城】Youtuber等8人涉佐敦暴動 1人染疫 裁決押後至9.21"
+title: "【理大圍城】YouTuber等8人涉佐敦暴動 1人染疫 裁決押後至9.21"
 date: 2022-08-05 06:10:32.000000000 +00:00
 link: https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E3%80%90%E7%90%86%E5%A4%A7%E5%9C%8D%E5%9F%8E%E3%80%91youtuber%E7%AD%898%E4%BA%BA%E6%B6%89%E4%BD%90%E6%95%A6%E6%9A%B4%E5%8B%95-1%E4%BA%BA%E6%9F%93%E7%96%AB-%E8%A3%81%E6%B1%BA%E6%8A%BC%E5%BE%8C%E8%87%B3921
 categories: inmedia
