--- a/_posts/2022-08-05-INITIUM-彼德-布䘵克如何改变20世纪剧场-当饥饿者同时拥有丰盛的想像.html
+++ b/_posts/2022-08-05-INITIUM-彼德-布䘵克如何改变20世纪剧场-当饥饿者同时拥有丰盛的想像.html
@@ -8,7 +8,7 @@ tags: blog
 author: 特约撰稿人 邓正健
 ---
 
-<p>「剧场是世界的，因此布䘵克也是世界的，他与昔日一众戏剧大师齐名，但他对当代世界剧场的影响，都超越了他们。」</p><p>特约撰稿人 邓正健</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220806-culture-peter-brook-obituar-theater/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/40da31fa76f84307b6de8a6243dafad8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="戏剧家彼德‧布䘵克。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「剧场是世界的，因此布䘵克也是世界的，他与昔日一众戏剧大师齐名，但他对当代世界剧场的影响，都超越了他们。」</p><p>特约撰稿人 邓正健</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220806-culture-peter-brook-obituar-theater/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/9cac62b715374a449e23b9fbe21acd77.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt="戏剧家彼德‧布䘵克。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">戏剧家彼德‧布䘵克。<span class="credit">摄：Michael Ward/Getty Images</span></figcaption></figure><p>说彼德‧布䘵克（Peter Brook，又译彼德‧布鲁克）是20世纪最具影响的戏剧家（有没有“之一”尚可斟酌），绝不为过。他刚于今年7月3日逝世，终年97岁，长寿无疑也是其影响力的因素之一。他生于1925年，正值两次大战之间，欧洲剧场当未受二战后各种前卫剧场理论洗礼，仍是现实主义戏剧天下：</p>
 <p>那个时候，布莱希特（Bertholt Brecht）还尚未把他的间离效果学说理论化；亚陶（Antonin Artaud）仍在他的超现实主义时期，未有“残酷剧场” （Theatre of Cruelty）概念； 荒诞剧代表人物贝克特（Samuel Beckett）跟尤奥斯高（Eugene Ionesco）仍在求学；更令人意外的是，布䘵克有时予人感觉是葛罗托斯基 （Jerzy Grotowski）的继承者，实情是他比葛罗托斯基年长7岁，布䘵克对葛罗托斯基“贫穷剧场”（Poor Theatre）的实践，是很多年后的事。布禄克与这些戏剧大师同为当代前卫剧场的开拓者，但跟几位相比，布䘵克的戏剧更贴近21世纪的当代经验。</p>
 <p>布䘵克是英国人，但我们未必会直说他是“英国戏剧家”。剧场是世界的，因此布䘵克也是世界的，他与昔日一众戏剧大师齐名，但他对当代世界剧场的影响，都超越了他们。在20世纪后半叶，当戏剧大师们陆续辞世，布䘵克仍以他旺盛的创作力，海纳大师们对当代剧场的种种敲问，并付诸实践，一直持续到21世纪。</p>
