--- a/_posts/2022-08-05-INITIUM-解放军演训-发射哪些飞弹-为何没发布警报-对台影响与感受温差.html
+++ b/_posts/2022-08-05-INITIUM-解放军演训-发射哪些飞弹-为何没发布警报-对台影响与感受温差.html
@@ -27,7 +27,7 @@ author: 李易安,郭瑾烨
             <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
 
 <p>根据《联合国海洋法公约》，领海为“领海基线”以外12海里的范围，具有主权意涵，至于专属经济海域（EEZ），则是紧接在领海之外，范围不得超过领海基线200海里，而海岸国可以对范围内的水域、海床及其底土的自然资源，进行勘探、开发、养护和管理，但他国依然可以在该海域航行、飞越或舖设海底电缆。</p>
-<p>虽然解放军演训并未揭露参演武器型号，但依据《澎拜新闻》、《环球时报》以及中国军事专家分析，解放军此次动员PHL-191火箭炮系统，最大射程达500公里，以及无人机、新一代空中加油机运油-20，与歼-20隐形战机等军力。至于发射之东风弹道飞弹型号虽未公布，但据推论应以东风-15B为主，至于射程达2000公里的东风-17此款极音速飞弹则未于首日军演现踪。</p>
+<p>虽然解放军演训并未揭露参演武器型号，但依据《澎湃新闻》、《环球时报》以及中国军事专家分析，解放军此次动员PHL-191火箭炮系统，最大射程达500公里，以及无人机、新一代空中加油机运油-20，与歼-20隐形战机等军力。至于发射之东风弹道飞弹型号虽未公布，但据推论应以东风-15B为主，至于射程达2000公里的东风-17此款极音速飞弹则未于首日军演现踪。</p>
 <p>台湾空军司令部昨日也公布台海周边空域空情动态，台海中线南北两端均有解放军机越线挑衅，计有3机型22架次军机进入中线东侧并随即返回，但22架次的军机越过中线已创下新高纪录。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220806-taiwan-whats-new-pla-exercises/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/d21039467e1146839380cd77ad3e0248.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月5日，台湾高雄的左营海军基地。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年8月5日，台湾高雄的左营海军基地。<span class="credit">摄：Ann Wang/Reuters/达志影像</span></figcaption></figure>
@@ -37,11 +37,11 @@ author: 李易安,郭瑾烨
 <p>实际上，传统弹道飞弹发射后以抛物线式弹道飞行，且其弹道极高，飞行方式多数会冲出大气层达到一定高度后再落下进行目标打击，但也因其飞行弹道高成为显著目标，长程预警雷达也能有效侦获。对拦截方来说，因弹道飞弹飞行时间长，且以几乎垂直的角度落下，有一定时间做出拦截反应。</p>
 <p>若是极音速飞弹（如解放军拥有的东风-17）发射后在抵达大气层边缘处时，极音速飞弹航向便会脱离、俯冲出击，因其特性导致长程预警雷达难以侦获。同时，极音速飞弹除飞行角度低伸、精准性高，尤其在极音速飞行下，末端还能以蛇行方式闪避敌方空防拦截，不论是飞行角度、来袭速度，以及末端的闪避飞行，都对现有飞弹拦截与侦测系统造成极大威胁。</p>
 <p>因此，如以上述所推论，解放军此次射击弹道飞弹为东风-15B来观察，此款飞弹弹道极高点约在140公里上下（射程600公里），进入大气层后，在国际法定义下不属于领空范围，且由于主要飞行路径位于大气层外，对飞越的广阔地面区域并无危害。因此各国飞弹防护系统，均以落弹点的解算为关键。</p>
-<p>所谓“领空”指的是“领土”与“领海”上方的“空气”，亦属国家主权区，一般认为领空不包含外大空，不过领空的“极限高度”为何，目前仍有争议，一般来说，会以“卡门线”（Karman Line）作为划分依据。卡门线指的是区分航空与太空领域所划分的界线，但因界定十分复杂与充满不确定性，到底是以80公里为主，还是以100公里为领空极限高度仍争论不休，留待国际法清楚定义。</p>
+<p>所谓“领空”指的是“领土”与“领海”上方的“空气”，亦属国家主权区，一般认为领空不包含外太空，不过领空的“极限高度”为何，目前仍有争议，一般来说，会以“卡门线”（Karman Line）作为划分依据。卡门线指的是区分航空与太空领域所划分的界线，但因界定十分复杂与充满不确定性，到底是以80公里为主，还是以100公里为领空极限高度仍争论不休，留待国际法清楚定义。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220806-taiwan-whats-new-pla-exercises/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/ebc4d7c00bc44c01893392c5ab4c30f6.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
 
-<p>而台湾军方用以侦监解放军弹道飞弹的雷达站为设立于新竹乐山的雷达站，乐山雷达站海拔2620公尺，居高临下，2003年由台湾立法院通过采购案规划建置，2012年3月雷达站架设完成，并于隔年2月正式成军，隶属空军作战指挥部。</p>
+<p>为侦监解放军弹道飞弹，台湾军方设立了位于新竹乐山的雷达站，乐山雷达站海拔2620公尺，居高临下，2003年由台湾立法院通过采购案规划建置，2012年3月雷达站架设完成，并于隔年2月正式成军，隶属空军作战指挥部。</p>
 <p>乐山雷达站耗资409亿元新台币，侦搜距离最大达5000公里、有效距离达3000公里，可有效侦搜中国弹道飞弹、巡弋飞弹等动态。雷达站监控范围涵纳东北亚至东南亚地区，据信为东亚地区侦搜能力最强之防空雷达。为保护雷达站不受解放军攻击，国军以天弓防空飞弹以及35快砲进行卫戍。</p>
 <p>此外，乐山雷达站内长年有美方技术人员驻守，2020年，台湾总统蔡英文前往乐山雷达站视导时，一张军方《军闻社》所释出的照片“不经意”揭示有美籍人员在场引起外界议论。由于2013年乐山雷达站成立前后，始终有该雷达站由美方主导的说法，因此该名曝光外籍人员是否为在台美军格外引关注。台湾空军回应，该人员为美方派遣技术代表，呼吁各界勿臆测。</p>
 <p>至于为何台湾军方并未发布防空警报，除了东风-15B进入大气层后对陆地威胁性小，且在乐山站铺路爪长程预警雷达侦监下，透过电脑自动解算飞弹落点并非位于台湾本岛，对陆地不构成威胁，因而无需发布警报示警。</p>
@@ -70,7 +70,7 @@ author: 李易安,郭瑾烨
 
 <h2>外媒对台湾的描绘，与台湾实际气氛存在落差</h2>
 <p>尽管佩洛西此次来台广受国际关注，但事实上，英国《金融时报》（Financial Times）于7月19日首次披露佩洛西可能来台时，这个消息并未在台湾引起太多讨论。</p>
-<p>尽管美国政治圈针对佩洛西是否应该来台的议题意见分歧，但当时台湾舆论场最热门的话题，仍是民进党藉桃园市长候选人林智坚的“论文门”事件，以及在林智坚任内完工、但施工品质不佳的新竹市棒球场争议。</p>
+<p>尽管美国政治圈针对佩洛西是否应该来台的议题意见分歧，但当时台湾舆论场最热门的话题，仍是民进党籍桃园市长参选人林智坚的“论文门”事件，以及在林智坚任内完工、但施工品质不佳的新竹市棒球场争议。</p>
 <p>在此脉络下，推特和脸书两个社群网络平台上，仿佛存在著两个非常不一样的台湾。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220806-taiwan-whats-new-pla-exercises/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/173257b03e1b4f0b882927bae13e9005.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
