--- a/_posts/2022-08-08-INMEDIA-法庭不一定公義-專訪舞台劇-辯護人-編劇導演-要問的是那些人為何犯法.html
+++ b/_posts/2022-08-08-INMEDIA-法庭不一定公義-專訪舞台劇-辯護人-編劇導演-要問的是那些人為何犯法.html
@@ -35,8 +35,7 @@ author: 獨媒報導
 <p>張可堅和郭永康有甚麼要堅持？二人認為是廣東話戲劇。</p>
 <p>在語言政策及時代背景下，郭永康認為廣東話戲劇很可能會被淘汰，自己可能失業「揸兜」，但他現在仍想堅持做下去。對他來說，廣東話是母語，如果有人要求他以英文或普通話寫劇本，他很大機會拒絕：「寫劇本要理解人物，要先理解佢嘅語言。當你唔了解佢嘅語言，其實寫唔出韻味，所以我用唔到普通話同英語寫劇本。唔係我唔想，而係我唔得。」</p>
 <p>他下一個劇本，是一個香港南音歌手的故事。打從一開始，主角已經知道這項藝術會被淘汰，但仍堅持唱下去，郭笑言：「覺得同我依家一樣！」他說得輕鬆：「粵語係我嘅母語。我知自己離開唔到呢個地方，就要諗（之後）點做。」</p>
-<p>曾把多套外國文本翻譯成廣東話的張可堅，則有點感慨：「有人嘅地方應該有戲劇，除非無咗個香港囉。<br />
-係極端㗎， 如果無咗香港，就無咗（廣東話戲劇）。」他提到不止自己，還有很多香港人的母語都是廣東話──所以他要以廣東話寫劇本，以廣東話訓練演員：「用普通話做戲就唔係咁得心應手。」</p>
+<p>曾把多套外國文本翻譯成廣東話的張可堅，則有點感慨：「有人嘅地方應該有戲劇，除非無咗個香港囉。係極端㗎， 如果無咗香港，就無咗（廣東話戲劇）。」他提到不止自己，還有很多香港人的母語都是廣東話──所以他要以廣東話寫劇本，以廣東話訓練演員：「用普通話做戲就唔係咁得心應手。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/j63175CgSo" title="導演張可堅在綵排期間作指導"><img src="https://live.staticflickr.com/65535/52262535459_80991c1d3e_b.jpg" width="1024" alt="導演張可堅在綵排期間作指導" /></a><br /><em>導演張可堅在綵排期間作指導</em></p>
 <p>記者：馮曉彤、趙苡彤</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
