--- a/_posts/2022-08-08-INITIUM-击落佩洛西-失控的好战民意-中国宣传口的双重事故.html
+++ b/_posts/2022-08-08-INITIUM-击落佩洛西-失控的好战民意-中国宣传口的双重事故.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "“击落佩洛西”：失控的好战民意，中国宣传口的双重事故"
+title: "“击落佩洛西！”：失控的好战民意，中国宣传口的双重事故"
 date: 2022-08-08 04:13:00.000000000 +00:00
 link: https://theinitium.com/article/20220808-opinion-china-pelosi-propaganda-problem/
 categories: initium
@@ -9,7 +9,7 @@ author: 李大猫
 ---
 
 <p>「这种放狠话式内宣调动起来的民意，是否是通常意义上的民族主义，都已经很难讲了。」</p><p>李大猫</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220808-opinion-china-pelosi-propaganda-problem/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/19de3dfecf0040d3913fd806878bd45a.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月1日，一名男子站在展示《环球时报》的玻璃柜前，报纸刊登了一篇关于美国众议院议长佩洛西 (Nancy Pelosi) 进行亚洲之行的头版文章。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年8月1日，一名男子站在展示《环球时报》的玻璃柜前，报纸刊登了一篇关于美国众议院议长佩洛西 (Nancy Pelosi) 进行亚洲之行的头版文章。<span class="credit">摄：Thomas Peter/Reuters/达志影像</span></figcaption></figure><p>当地时间8月2日晚，美国众议员议长佩洛西飞抵台北，这是1997年时任议长金里奇访台以来的首次高级别访问，在获得媒体广泛关注的同时，也在大陆民族主义网民中引起戏剧性的情绪地震。</p>
+            <figcaption itemprop="caption">2022年8月1日，一名男子站在展示《环球时报》的玻璃柜前，报纸刊登了一篇关于美国众议院议长佩洛西 (Nancy Pelosi) 进行亚洲之行的头版文章。<span class="credit">摄：Thomas Peter/Reuters/达志影像</span></figcaption></figure><p>当地时间8月2日晚，美国众议院议长佩洛西飞抵台北，这是1997年时任议长金里奇访台以来的首次高级别访问，在获得媒体广泛关注的同时，也在大陆民族主义网民中引起戏剧性的情绪地震。</p>
 <p>佩洛西计划访台的消息大约在7月18日经由英媒《金融时报》流出。如果说在等待靴子落地的两周中，大陆网民表示出的愤怒、轻蔑，甚至期待（认为此次访问可以让“武统”名正言顺）等情绪都可以在民族主义框架内理解，专机落地当晚民间的失望情绪大爆炸则体现出新的症候性。</p>
 <p>这种失望如同两波潮水，大体分为两个层次：最先爆发的是对国家，尤其是部队不作为、“让她平安来平安走”的失望；第二波则是对宣传机关“宣传事故”的失望。这一层失望比较微妙，既反映了民众对于宣传机器态度的变化，也直白揭示了“宣传口”本身的一些特点，本文将在后面重点讨论这第二层失望。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220808-opinion-china-pelosi-propaganda-problem/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/b91e66b22511470d96fa3281aea0149c.JPG?imageView2/1/w/1080/h/720/format/jpg" alt="2022年8月2日，美国众议院议长佩洛西率领访问团到访台湾，台湾外交部部长吴钊燮（左一）前往接机。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
