--- a/_posts/2022-08-08-INMEDIA-團體到金管局請願-促-處置-佩洛西及直系親屬在港資產.html
+++ b/_posts/2022-08-08-INMEDIA-團體到金管局請願-促-處置-佩洛西及直系親屬在港資產.html
@@ -11,7 +11,7 @@ author: 獨媒報導
 <img src="https://www.inmediahk.net/files/column_images/111_9.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>美國眾議院議長佩洛西於上周二（2日）到訪台灣，外交部於上周五（5日）宣布制裁佩洛西及其直系親屬。「愛國團體」「公義力量」今早分別向特首辦及金管局遞交請願信，促金管局跟隨中央，盡快「處置」佩洛西及其直系親屬在港的資產。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/p3xbn3x2Mn" title="無標題"><img src="https://live.staticflickr.com/65535/52271323705_f3c144cc15_b.jpg" width="1024" alt="無標題" /></a></p>
 <p>「愛國團體」「公義力量」的成員，今早分別到政府總部及金管局請願，他們高舉印有「支持特首及金管局盡快制裁竄訪台灣的佩洛西」字句的橫幅，並高呼「金管局快處置佩洛西家資產」、「支持特首超哥配合中央制裁」、「竄訪中國台灣侵犯國家主權」等口號。</p>
-<p>內地傳媒《深圳衛視》昨日（7日）的報道指，佩洛西丈夫保羅馬修斯（Paul Pelosi）管理的在港公司銘基亞洲基金管理資產高達174億美元。其子保羅佩洛西（Paul Pelosi Jr ）亦持股3間與中國或香港有商業往內的公司。</p>
+<p>內地傳媒《深圳衛視》昨日（7日）的報道指，佩洛西丈夫保羅佩洛西（Paul Pelosi）管理的在港公司銘基亞洲基金管理資產高達174億美元。其子保羅佩洛西（Paul Pelosi Jr ）亦持股3間與中國或香港有商業往內的公司。<strong><font color="blue">（21:37更新）</font>銘基亞洲今日則發聲明，指報導不實，其公司與佩洛西家族無任何直接關係，佩洛西的丈夫保羅佩洛西，並非其公司創辦人及股東，該公司的創辦人實為保羅．馬修斯（Paul Matthews）。</strong></p>
 <p>「公義力量」副召集人陳女士表示，佩洛西訪問台灣侵犯國家主權並干預中國內政，是「頭號反華政客」。惟佩洛西卻在背後與其家人投資多間業務與中國關係密切的企業，賺取豐厚利潤，促政府及金管局盡快「處置」佩洛西與其直系親屬的在港資產。「唔可以俾佢一面就傷害我哋香港，傷害國家，分裂我哋國家，呢度呢就賺我地香港人嘅錢。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/R7V0521sR0" title=" "><img src="https://live.staticflickr.com/65535/52270829051_4302b366a7_b.jpg" width="1024" alt=" " /></a></p>
 <p>「公義力量」成員葉女士則指美國千方百計想把台灣分割出去，試圖「傷害14億中國人民嘅感情」，「喺無人性嘅妖魔怪鬼」。她又指美國經常制裁他國，故現應以相同手法「奉還」予美國。</p>
