--- a/_posts/2022-08-08-INMEDIA-法庭不一定公義-專訪舞台劇-辯護人-編劇導演-要問的是那些人為何犯法.html
+++ b/_posts/2022-08-08-INMEDIA-法庭不一定公義-專訪舞台劇-辯護人-編劇導演-要問的是那些人為何犯法.html
@@ -8,8 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_248.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>電視台錄影廠內，一直替受害者家屬發聲的蕭議員語氣激昂，不斷揮動手勢，「陳律師你唔好再詭辯喇！最高法院判決王然死刑定讞唔係政治問題啊，係正義嘅彰顯！」</p>
-<p>相反，律師陳哲豪語氣平靜，反問激動的蕭律師：「喺偵訊期間，警官違反多項規定，除咗第一次警詢有律師在場，其餘偵查程序包括檢察官訊問程序、羈押訊問程序，甚至係搜索、扣押程序，精神鑑定程序等等，過程全部都無律師在場，亦都喺未經書面許可之下用精神科藥物去輔助會談。蕭議員，咁樣又係咪法律面前，人人平等？」</p>
+<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_248.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>甫踏入家門，穿起西裝、拿着公事包的他，獲得太太和女兒的迎接與支持；但回到社會，他卻被質疑、被唾罵、被形容為「魔鬼辯護人」，全因身為律師的他，在法庭上為一個隨機殺人犯辯護。當全世界都認為他將「正義」扭曲，他反問：到底甚麼是正義？</p>
 <p>改編自黃致豪律師為「台北捷運隨機殺人案」兇手鄭捷辯護的舞台劇《辯護人》，從辯護律師的角度出發，試著解說為甚麼一個犯下彌天大錯的殺人犯，他的權益都值得保障。在劇作中，律師揭示法律制度的種種問題，質疑法庭把人推往更加不公義的胡同。</p>
 <p>在紛亂的時代下，中英劇團藝術總監張可堅和編劇郭永康有個共同的心願──希望大家不要一味批判，而是思考那些犯人欄內的、與我們一同生活的人，為何要犯法。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/gdte9V7105" title="演員綵排：袁浩楊（飾演陳哲豪律師）及蔡蕙琪（飾演其太太）"><img src="https://live.staticflickr.com/65535/52262535439_e2a4a33e39_b.jpg" width="1024" alt="演員綵排：袁浩楊（飾演陳哲豪律師）及蔡蕙琪（飾演其太太）" /></a><br /><em>演員綵排：袁浩楊飾演陳哲豪律師、蔡蕙琪飾演其太太</em></p>
@@ -20,7 +19,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/15Bys4G980" title="Untitled"><img src="https://live.staticflickr.com/65535/52262274393_24699e7fb2_z.jpg" alt="Untitled" /></a><br /><em>編劇郭永康</em></p>
 <p>近年來，香港司法制度也備受質疑，有人更稱「法治已死」，而港府則一直重申司法獨立。在紛擾的世代裡上演《辯護人》，有何意義？郭永康曾思考要改編劇本，將台灣案件搬到香港：「但我最後覺得，呢套劇唔應該改編做香港。呢兩年講香港嘅嘢講得太多，不如睇吓台灣，有個空間，去睇吓法治本質係咩。」郭認為，好的藝術應該讓人思考，如果與現實太接近，容易令作品淪為情緒宣洩，無助觀眾成長。</p>
 <p>與其討論現今法治如何腐敗，張可堅認為掌握法治的原貌才重要：「法庭原本訂立嘅精神，係咩就係咩。最重要我哋點樣保持初心。」</p>
-<p>眼見自己想做的劇本從雛型改到第六稿，終於搬入排練室，張可堅在演員第一次圍讀時，已被台詞感動到落淚。在綵排期間，律師嘗試說服受害人家屬聆聽罪犯犯案的原因，甚至令自己女兒被拐走，身陷險境；張坐在導演席上，看到這一段，再次忍不住眼泛淚光，要用紙巾輕抹。</p>
+<p>在綵排期間，其中一幕是受害人家屬與律師對話，雙方表現激動，張坐在導演席上觀看時，再次忍不住眼泛淚光，要用紙巾輕抹。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/g863F414MU" title="Untitled"><img src="https://live.staticflickr.com/65535/52262746240_80bbfa63bb_z.jpg" alt="Untitled" /></a><br /><em>導演張可堅觀看綵排時落淚</em></p>
 <p><strong>「懇請你們，去法院看看罪犯的人生」</strong></p>
 <p>近年來，受反修例運動及防疫影響，檢控人數有上升趨勢。愈來愈多人被關在犯人欄內，接受審判。張可堅留意到社會反應很兩極，要麼覺得不應判罪，要麼動輒支持執法，但他反問在作出個人判決前，有沒有聆聽犯人的心聲，了解他們犯案的原因；抑或只是立場行先，罔顧細節？郭永康認為評論社會情況時，一味要求罪犯坐幾年監沒有意思：「你有冇理解人點解犯罪？」</p>
