Update VOCUS 2022-08-09 patch

--- a/_posts/2022-08-08-VOCUS-再見了-橡果兄弟-奇蹟之夏.html
+++ b/_posts/2022-08-08-VOCUS-再見了-橡果兄弟-奇蹟之夏.html
@@ -43,5 +43,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">我認為《再見了，橡果兄弟！－奇蹟的暑假－》雖然想以友情、成長來鋪成，但因為時間不像電視動畫般充足，變得很依賴自說自話來速食化觀眾對角色的認識，這點雖然的確能把整個故事說完整也對角色有基本的認識，但電影中用了太多次這樣的手法，導致最後的故事安排原本應該很感動的地方，卻因為鋪墊不構，而效果並不足於感動觀眾。</div>
 <div class="draft-block draft--p left">但整體而言如同導演讓人驚豔的《比宇宙更遠的地方》動畫一樣，展現出日本與國外之間的連結，整體來說比起一些過去大師級導演的日本好棒棒論，年輕一輩的日本動畫導演的作品跟世界接軌和展現出兩邊的羈絆這點，反而讓電影寫實性和故事轉折增加不少可看性。</div>
 <div class="draft-block draft--p left">《再見了，橡果兄弟！－奇蹟的暑假－》是一部雖然有著缺點，但總歸還是中規中矩，表現得體的青春友情原創動畫。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/YhO-PZ1GX1U"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/YhO-PZ1GX1U"></iframe></div>
