--- a/_posts/2022-08-08-VOCUS-商場上怎麼用英文婉拒交稿-交報告-提交文件.html
+++ b/_posts/2022-08-08-VOCUS-商場上怎麼用英文婉拒交稿-交報告-提交文件.html
@@ -9,21 +9,37 @@ author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 ---
 
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/0a3031f6-b9da-42a8-acf9-1d8e9f8e6e1c.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">在職場有時需要傳送或提交文件給別的部門或其他公司，但如果還來不及準備或還沒時間構思，必須用英文婉拒的時候，怎麼樣可以明確表達自己的拒絕又不至於失禮？透過國外作者的來信，學學他的表達技巧。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-8f391">作者百百款，交手冷暖自知</h2>
 <div class="draft-block draft--p left">在與國外作者交手的過程中，有些作者特別習慣拖稿，但讓人想撞牆的是，拖稿就算了，寄來的稿子沒有先校稿。錯字太多也算了，麻煩的是圖表數據都自相矛盾，或是連金額的單位都忘了標示出來，你還要叫他修改。不誇張，還有作者修改回來之後還是錯的，更甚者還有半篇複製貼上國外新聞稿的，這些都會讓收稿人員心中非常不是滋味。</div>
 <div class="draft-block draft--p left">所以作為作者必須要求自己的公德心，不是自己隨便，別人就有義務接受。甚至別人還要佛心來著幫忙修稿？沒那種便宜事。當別人簽約到品質更高的作者，自己就會變成第一個被丟包的對象，這只是時間的問題而已。</div>
 <div class="draft-block draft--p left">還好，這次邀請到的美國新作者是業界有名聲的專業人士，產量固定，找不到錯字，交稿前都有做同儕校對，基本上是交稿就能直接上稿的狀態。雖是特約的定期作者，但他做事謹慎，每一次都還是要重新確認交期，他若沒確認時間來得及，就不會答應給稿。</div>
 <div class="draft-block draft--p left">這次也遇到同樣情況，他必須暫時婉拒邀稿的請求，確認有題材可寫再另行通知我。這就回到本文的主題：他會用什麼表達方式來回覆我的邀稿探詢？</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-8p6ou">美國作者的回信</h2>
 <div class="draft-block draft--p left">以下部分引用作者的來信。讀讀看他的文字，你能挖到多少寶？</div>
+<div class="draft-block draft--p left"><span style="font-weight: bold; ">原文：</span></div>
+<div class="draft-block draft--quotesSpecial center"><div class="content">I cannot make a commitment for the technical article submission by the deadline. Let me give some thought as to a topic and do a little homework . I will let you know in a week. But for now, the answer is no article.</div></div>
+<div class="draft-block draft--p left"><span style="font-weight: bold; ">單字釋義：</span></div>
+<div class="draft-block draft--quotesSpecial center"><div class="content">I cannot(無法) make a commitment(承諾) for the technical(技術的) article(文章) submission(提交) by(在…之前) the deadline(期限). Let(讓) me give some thought(思考) as(關乎) to(於) a topic(主題) and do a little(些微) homework(功課、事前調查). I will let you know(知道) in a week(週). But for now, the answer(答覆) is no article.</div></div>
+<div class="draft-block draft--p left"><span style="font-weight: bold; ">中譯：</span></div>
+<div class="draft-block draft--quotesSpecial center"><div class="content">我沒辦法承諾能在期限前提交這篇技術性文章。讓我好好想一想文章的主題，做一點功課。我會在一周後讓你知道結果，但目前我的答覆是還不會給稿。</div></div>
+<h2 class="draft-block draft--h2" name="header-4fq1i">開箱挖寶</h2>
+<div class="draft-block draft--p left"><span style="font-weight: bold; ">1. cannot(無法) make a commitment(承諾) for + 被邀請的事項 = 無法保證...</span></div>
+<div class="draft-block draft--p left">我們中文習慣說「我可沒法保證某某事」。英文除了可以說「I can't guarantee(保證、擔保) you + 事物」或者「I can't assure(使某人確信) you + 事物」之外，另一個拐個彎的講法是「can't make a commitment(承諾) for + 事物」。字面上是說無法為了(for)某事物做出(make)一項承諾，實際上意思是無法保證該事物。</div>
 <div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<pre class="public-DraftStyleDefault-pre draft-block"><pre class="draft--code-block">I cannot guarantee you the requested(被要求要提供的) article(文章).</pre><pre class="draft--code-block">= I cannot assure you the requested article.</pre><pre class="draft--code-block">= I cannot make a commitment for the requested article.</pre></pre>
+<div class="draft-block draft--p left"><span style="font-weight: bold; ">2. 名詞 (文件、報告、申請等等) + submission</span></div>
+<div class="draft-block draft--p left">這是一個複合名詞，也就是「名詞甲 + 名詞乙」的結構，就跟中文的「數據報告 (= 數據<span style="font-weight: bold; ">的</span>報告)」和「周遭環境清潔度檢驗報告 = 周遭<span style="font-weight: bold; ">的</span>環境<span style="font-weight: bold; ">的</span>清潔度<span style="font-weight: bold; ">的</span>檢驗<span style="font-weight: bold; ">的</span>報告」等等複合式名詞的概念一樣，省略掉<span style="font-weight: bold; ">的(</span>of<span style="font-weight: bold; ">)</span>，讓句子更簡潔，不讓聽者和讀者發瘋。article submission就是文章的提交，翻譯成常用國語就是「交稿」。同樣的邏輯：</div>
+<ul>
+  <li class="draft-block draft--li">application(申請) submission = 提交申請的動作</li>
+  <li class="draft-block draft--li">record(紀錄) submission = 提交紀錄的動作</li>
+  <li class="draft-block draft--li">report(報告) submission = 提交報告的動作</li>
+</ul>
+<div class="draft-block draft--p left"><span style="font-weight: bold; ">3. give(給) some(些許) thought(思考) as to + 事物 = 好好想想某事物</span></div>
+<div class="draft-block draft--p left">give some thought意思是針對(as to)某件事，給它稍微想一下。雖然字面上是稍微想想，但這是比較含蓄的講法，其實就是要好好認真想想了。</div>
+<pre class="public-DraftStyleDefault-pre draft-block"><pre class="draft--code-block">I'll give it some thought.</pre><pre class="draft--code-block">= I'll give some thought as to this(這) matter(事務).</pre></pre>
+<div class="draft-block draft--p left"><span style="font-weight: bold; ">4. 論述結構</span></div>
+<blockquote class="draft-block draft--blockquote">I cannot make a commitment for +被邀請的事項. Let me give some thought as to + 相關事物 . I will let you know by + 時限. But for now, the answer is + 暫時的答覆.</blockquote>
+<blockquote class="draft-block draft--blockquote">表明無法承諾 ➡ 給自己爭取轉圜的時間 (不把話說死，留後路) ➡ 給對方一個等待答覆的期限 ➡ 先給對方現階段的回答。</blockquote>
+<div class="draft-block draft--p left">看完有沒有發現短短一封信可以教我們很多學英文沒發現的細節？魔鬼就藏在細節裡！課本無法教你的實戰力就是從這裡學來的。</div>
+<div class="draft-block draft--p left">編寫外語教學文章耗時費力，如果有幫助你拓展外文視野，如果你喜歡我作品，懇請訂閱並追蹤我的「擊破你的怪怪英日文」專題！所有生活好用的英日文都完整收錄在此專題中喔！ 🙏🙏🙏</div>
