--- a/_posts/2022-08-08-VOCUS-step-與-步-行步-踏-踩-跨-跨足-伐步-跡-踏板-階-踏階-台階-級-級調-驟步-逐步-測步-繼-後-異-等橋接.html
+++ b/_posts/2022-08-08-VOCUS-step-與-步-行步-踏-踩-跨-跨足-伐步-跡-踏板-階-踏階-台階-級-級調-驟步-逐步-測步-繼-後-異-等橋接.html
@@ -58,7 +58,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">step = 聲three.ep = 聲三ep = 聲epepep = 聲Epoint與比與阝= 聲日點與比與阝= 聲日㇀與比與阝= 聲白與比與阝= 聲皆與阝= 聲階</span>，意通「音階」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">step = shell刀E步 = 貝刂ε步 = 則3步 = 則三步 = 則氵步 = 測步</span>，或意通「步測」<span style="font-weight: bold; ">。</span>所謂「測步」或「步測」就是以一個單位的「步距」來概算走過路徑的長度或距離，而這個單位「步距」也可能說是「測步」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">step = 糸tEph = 糸匕εf = 糸匕ㄠfour  = 糸匕ㄠ四 = 糸匕ㄠㄠㄠㄠ = 繼</span>。其中 E 通過 ε 約略象徵漢字符號「ㄠ」，p 代表 ph 再旁 f 且代表 four 而轉換漢字「四」以作爲構字用語。此「繼」字多用於親屬稱謂，相當於「<span style="font-weight: bold; ">繼養</span>」、「<span style="font-weight: bold; ">過繼</span>」或「<span style="font-weight: bold; ">養</span>」、「<span style="font-weight: bold; ">後</span>」(<span style="font-weight: bold; ">step = 行兜εpalm = ㄔ兜ㄠ掌 = ㄔ兜ㄠ手 = ㄔ兜ㄠ又= 後</span>)或「<span style="font-weight: bold; ">後繼</span>」之類。此義多作爲字根 step- 來使用，但也可能有「異」的漢字語意，即：<span style="font-weight: bold; ">step = 雙tㄧ八 = tt一㇀丶= 田twenty一㇀丶= 田〹一㇀丶= 田共 = 異</span>。例如：step-father、stepfather、step-mother、stepmother、step-daughter、stepdaughter、step-son、stepson、stepbrother、stepsister、stepchild、stepparent 等。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-9l2pb"><span style="font-weight: bold; ">P.S.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">stepped：step有的；step樣的；step形的；step被動；step被為動；step之已動；step之矣動；step(之)完動；step了(動)。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">stepping：step的；step樣；step樣的；step之樣；step之樣子；step之名動；step之於正；step之於將；step之用；step之用具；step之工具；step之能技。</span></div>
@@ -72,8 +71,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">overstep：越級；越階；過越限度；超過準標；越超級等；越限級階；過越適當一般；越超型態一般。</span>此字中內含的 step 有部份意思可能比較特殊。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">steppe：少樹之平原</span>，意指「樹木很少的平原」，其中 t 代表 tree<span style="font-weight: bold; ">；荒原；荒野；草原龐；草原大；草原龐野。</span>此字與前述 step 一字關係不大。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">two-step：二拍；二拍節；二拍版；二拍調；二步；二步舞；二拍舞；二拍蹈；二拍節舞蹈；二拍調舞步。</span>據說是源自公元 1893 年的一種舞曲或舞步形式的名稱，或寫爲 2step，其中的 step 意思也可能較特殊。</div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/Z_MvkyuOJgk"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/Z_MvkyuOJgk"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/Z_MvkyuOJgk" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/Z_MvkyuOJgk</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Ed Sheeran- 2step (feat.Lil Baby) - [Official Video] / 分享自 YouTube】(P.S. 其中 feat. 可能有「附帶；附參；附加；友誼助陣；串場；介引；力推」等含意，是指主唱者邀請另一位歌手在整首歌曲中也演唱一段來串場或助陣。)</span></div>
-<div class="draft-block draft--p left"></div>
