--- a/_posts/2022-08-08-INITIUM-早报-台湾外交部谴责中国持续军演-吴钊燮今日举行国际记者会.html
+++ b/_posts/2022-08-08-INITIUM-早报-台湾外交部谴责中国持续军演-吴钊燮今日举行国际记者会.html
@@ -29,7 +29,7 @@ author:
 <p><a href="http://au.china-embassy.gov.cn/sghdxwfb/202208/t20220806_10736391.htm">中国驻澳大利亚大使随即回应</a>，呼吁澳大利亚在涉及中日两国之间海洋争议问题上“保持中立，不应选边站队”；在涉及台湾问题上“不附和、不配合个别国家‘以台遏华’的错误战略，不要被别人带节奏，为中澳关系制造新的麻烦和干扰”。</p>
 <p>美联社指，前一届澳大利亚政府执政九年中，中澳两国关系陷入低谷。新一届澳大利亚政府今年5月上台后，中国政府曾发出讯号，表示双方关系可能会重启。</p>
 <h3>李显龙担忧美中局势恶化波及新加坡</h3>
-<p>新加坡总理李显龙昨日发表国庆日（8月2日）前<a href="https://www.reuters.com/world/asia-pacific/singapore-pm-warns-worsening-geopolitical-climate-national-address-2022-08-08/">电视致辞</a>，对美中关系因台湾问题进一步恶化表达严重关切。</p>
+<p>新加坡总理李显龙昨日发表国庆日（8月9日）前夕<a href="https://www.reuters.com/world/asia-pacific/singapore-pm-warns-worsening-geopolitical-climate-national-address-2022-08-08/">电视致辞</a>，对美中关系因台湾问题进一步恶化表达严重关切。</p>
 <p>李显龙称，“在我们周围，一场风暴正在形成。美中关系正在恶化，双方问题成堆、疑虑重重，而且交流有限”。</p>
 <p>他还表示，“这种情况短期内很难改善，且误判或意外很容易让局势进一步恶化”。</p>
 <p>李显龙认为，新加坡将会受到美中在该地区激烈竞争和紧张关系的夹击，要为未来可能比现在更不太平、更不稳定做准备。</p>
